[gd_scene load_steps=14 format=3 uid="uid://dd2d0exahd423"]

[ext_resource type="Script" path="res://Interactables/chest/chest.gd" id="1_cvxp8"]
[ext_resource type="Texture2D" uid="uid://bdl2hii4rurum" path="res://Interactables/chest/treasure-chest.png" id="2_7hu84"]
[ext_resource type="Texture2D" uid="uid://bmht6boo1mml2" path="res://Items/sprites/items.png" id="3_6jp2g"]
[ext_resource type="AudioStream" uid="uid://ch4smm4f8fldp" path="res://Interactables/chest/treasure-open.wav" id="4_htdvh"]
[ext_resource type="PackedScene" uid="uid://boy4i2leish51" path="res://HelperNodes/persist/persist.tscn" id="5_sj2iq"]

[sub_resource type="AtlasTexture" id="AtlasTexture_8oitk"]
atlas = ExtResource("3_6jp2g")
region = Rect2(0, 0, 32, 32)

[sub_resource type="Animation" id="Animation_k2lce"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sprite2D:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [0]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("ItemSprite:visible")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [true]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("ItemSprite:position")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector2(0, -11)]
}
tracks/3/type = "value"
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/path = NodePath("ItemSprite:modulate")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Color(1, 1, 1, 1)]
}

[sub_resource type="Animation" id="Animation_3fba7"]
resource_name = "closed"
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sprite2D:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [0]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("ItemSprite:visible")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [false]
}

[sub_resource type="Animation" id="Animation_w85v3"]
resource_name = "open"
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sprite2D:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [1]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("ItemSprite:visible")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [false]
}

[sub_resource type="Animation" id="Animation_y0qkc"]
resource_name = "opening"
length = 2.0
step = 0.1
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sprite2D:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.1),
"transitions": PackedFloat32Array(1, 1),
"update": 1,
"values": [0, 1]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("ItemSprite:visible")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0, 0.1),
"transitions": PackedFloat32Array(1, 1),
"update": 1,
"values": [false, true]
}
tracks/2/type = "audio"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("AudioStreamPlayer2D")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"clips": [{
"end_offset": 0.0,
"start_offset": 0.0,
"stream": ExtResource("4_htdvh")
}],
"times": PackedFloat32Array(0.1)
}
tracks/2/use_blend = true
tracks/3/type = "value"
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/path = NodePath("ItemSprite:position")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/keys = {
"times": PackedFloat32Array(0, 0.3, 0.5, 2),
"transitions": PackedFloat32Array(1, -2, -2, 1),
"update": 0,
"values": [Vector2(0, -11), Vector2(0, -64), Vector2(0, -50), Vector2(0, -50)]
}
tracks/4/type = "value"
tracks/4/imported = false
tracks/4/enabled = true
tracks/4/path = NodePath("ItemSprite:modulate")
tracks/4/interp = 1
tracks/4/loop_wrap = true
tracks/4/keys = {
"times": PackedFloat32Array(0.2, 0.3, 0.5, 1, 2),
"transitions": PackedFloat32Array(1, 1, 1, 1, 1),
"update": 0,
"values": [Color(1, 1, 1, 1), Color(2, 2, 2, 1), Color(1, 1, 1, 1), Color(1, 1, 1, 0.75), Color(1, 1, 1, 0)]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_fx55y"]
_data = {
"RESET": SubResource("Animation_k2lce"),
"closed": SubResource("Animation_3fba7"),
"opened": SubResource("Animation_w85v3"),
"opening": SubResource("Animation_y0qkc")
}

[sub_resource type="RectangleShape2D" id="RectangleShape2D_d01mf"]
size = Vector2(32, 9)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_x16ee"]
size = Vector2(38, 20)

[node name="Chest" type="Node2D"]
process_mode = 3
script = ExtResource("1_cvxp8")

[node name="Sprite2D" type="Sprite2D" parent="."]
position = Vector2(0, -10)
texture = ExtResource("2_7hu84")
hframes = 2

[node name="ItemSprite" type="Sprite2D" parent="."]
position = Vector2(0, -11)
texture = SubResource("AtlasTexture_8oitk")

[node name="Label" type="Label" parent="ItemSprite"]
offset_left = 11.0
offset_top = -13.0
offset_right = 51.0
offset_bottom = 10.0
theme_override_colors/font_outline_color = Color(0, 0, 0, 1)
theme_override_constants/outline_size = 4
theme_override_font_sizes/font_size = 10
vertical_alignment = 1

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
libraries = {
"": SubResource("AnimationLibrary_fx55y")
}
autoplay = "closed"

[node name="AudioStreamPlayer2D" type="AudioStreamPlayer2D" parent="."]

[node name="CollideStaticBody2D" type="StaticBody2D" parent="."]
collision_layer = 16
collision_mask = 0

[node name="CollisionShape2D" type="CollisionShape2D" parent="CollideStaticBody2D"]
position = Vector2(0, 6.5)
shape = SubResource("RectangleShape2D_d01mf")

[node name="InteractArea2D" type="Area2D" parent="."]
collision_layer = 0
collision_mask = 4
monitorable = false

[node name="CollisionShape2D" type="CollisionShape2D" parent="InteractArea2D"]
position = Vector2(0, 5)
shape = SubResource("RectangleShape2D_x16ee")
debug_color = Color(0, 0.7, 0.0633462, 0.42)

[node name="IsOpen" parent="." instance=ExtResource("5_sj2iq")]
